<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl"
    tools:context="com.example.rohaan.cafeb.MainActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/relativeLayout">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ca"
        android:scaleType="centerCrop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/imageView2"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/cafe_basil"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:id="@+id/lr_one">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="100dp"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/burger"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,NestedWeights" />

        <ImageView
            android:layout_width="10dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/milkshakes"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="10dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/desserts"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />



        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgers"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/milkshakes"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/desserts"
            android:layout_weight="1"
            android:textSize="16sp"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/loc"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/address"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_margin="8dp"


             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10dp"

            android:text="@string/estrocio_residency_caranzalem_panjim_goa_403002_india"
            android:layout_margin="8dp"
             />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/time"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="10dp"
            android:text="@string/hours"
            android:textStyle="bold"
            android:layout_margin="8dp"


            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10dp"
            android:text="@string/_11am_3pm_5_9pm"
            android:layout_margin="8dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/ph"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/contact"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_margin="8dp"


            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10dp"

            android:text="@string/_91_98602_89290"
            android:layout_margin="8dp"
            />


    </LinearLayout>


</LinearLayout>

